--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <style>
-.google-logo{margin: auto;
+.google-logo img{margin-left: auto;
+margin-right: auto;
+display: block;
+margin-top: 15%;
 }
+.search-bar{    display: flex;
+    justify-content: space-evenly;
+    padding-top: 20px;
+}
+.search-bar input{    height: 40px;
+    width: 5in;
+    border-radius: 30px;
+    border-color: rgb(148 146 146 / 37%);}
+
 </style>
+
 <body>
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+
       <div class="google-logo">
       <img src="https://web.archive.org/web/20191130234759im_/https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google-logo">
-</div>
+    </div>
+
+    <div class="search-bar">
+<input type="text" placeholder="">
+    </div>
+
 </body>
