--- a/index.html
+++ b/index.html
@@ -13,13 +13,30 @@ margin-top: 15%;
     border-radius: 30px;
     border-color: rgb(148 146 146 / 37%);}
 
+    .navigation{display: inline;
+      display:flex;
+    justify-content: space-between;}
+
+    .navigation ul{list-style: none;
+    }
+
 </style>
 
 <body>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-
+<div class="navigation">
+  <ul>
+    <li><a href=""> About</a></li>
+    <li><a href=""> Store</a></li>
+    <li><a href=""> Gmail</a></li>
+    </ul>
+    <ul>
+    <li><a href=""> images</a></li>
+    <li><span class="material-icons">face</span></li>
+  </ul>
+</div>
       <div class="google-logo">
       <img src="https://web.archive.org/web/20191130234759im_/https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google-logo">
     </div>
