--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@ margin-top: 15%;
     border-radius: 30px;
     border-color: rgb(148 146 146 / 37%);}
 
-    .navigation{display: inline;
+    .navigation{
       display:flex;
     justify-content: space-between;}
 
-    .navigation ul{list-style: none;
+    .navigation ul li{list-style: none;
+    display: inline;
+    padding: 13px 15px 0 15px;
     }
-
+    body{font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;}
+    .navigation span{padding: 13px 15px 0 15px;
+    }
 </style>
 
 <body>
@@ -30,11 +35,11 @@ margin-top: 15%;
   <ul>
     <li><a href=""> About</a></li>
     <li><a href=""> Store</a></li>
-    <li><a href=""> Gmail</a></li>
     </ul>
     <ul>
-    <li><a href=""> images</a></li>
-    <li><span class="material-icons">face</span></li>
+      <li><a href=""> Gmail</a></li>
+    <li><a href=""> Images</a></li>
+    <li><span class="material-icons">apps</span></li>
   </ul>
 </div>
       <div class="google-logo">
