--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@ margin-top: 15%;
     border-color: rgb(148 146 146 / 37%);}
 
     .navigation{
-      display:flex;
+      display: flex;
+    align-items: baseline;
     justify-content: space-between;}
 
-    .navigation ul li{list-style: none;
+    .navigation ul li {list-style: none;
     display: inline;
-    padding: 13px 15px 0 15px;
+    padding: 0 15px 0 15px;
     }
     body{font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;}
-    .navigation span{padding: 13px 15px 0 15px;
+    .navigation ul li sspan{padding: 0 15px 0 15px;
     }
 </style>
 
