just need footer

--- a/index.html
+++ b/index.html
@@ -2,38 +2,35 @@
 .google-logo img{margin-left: auto;
 margin-right: auto;
 display: block;
-margin-top: 15%;
+margin-top: 7%;
 }
 .search-bar{    display: flex;
     justify-content: space-evenly;
-    padding-top: 20px;
+    padding-top: 40px;
 }
-.searchContainer{
-  background-color: red;
-   height: 40px;
-    width: 5in;
-    border-radius: 30px;
-    display:block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 20px;
-    }
 
 .search-bar input{    height: 40px;
-    width: 5in;
+    width: 5.7in;
     border-radius: 30px;
     border-color: rgb(148 146 146 / 37%);
     font-size: 18px;
   padding-left: 50px;
-display: block;}
+display: block;
+color:#9aa0a6;
+}
+
+
 
     .search-bar input:hover, .search-bar input:focus {
   outline: none;}
 div .search-icon{display:unset;}
 
+
 .search-icon span{    position: absolute;
-    margin-left: 32.5%;
-    margin-top: 27;}
+    margin-left: 36%;
+    margin-top: 48;
+  font-size: 20px;
+color:#9aa0a6 ;}
 
     .navigation{
       display: flex;
@@ -54,6 +51,8 @@ div .search-icon{display:unset;}
     .navigation ul li span{padding: 0 15px 0 15px;
       position: relative;
     top: 6px;
+color:#9aa0a6 ;}
+   
     }
     
 </style>
